create footer section

--- a/index.html
+++ b/index.html
@@ -93,124 +93,110 @@
 
         <section>
             <div class="container mx-auto px-5 sm:px-0">
-                <h2 class="text-primary font-semibold text-xl mb-4">Trending Now</h2>
+
+                <h2 class="text-primary font-semibold text-xl font-headers mb-4">Trending Now</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-7">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Under Investigation.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Right Time.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Breaking The Veil.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The New Roommate.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                 </div>
 
-                <h2 class="text-primary font-semibold text-xl mb-4">Because You Watched "The Abyss"</h2>
+                <h2 class="text-primary font-semibold text-xl font-headers mb-4">Because You Watched "The Abyss"</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-7">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Amaizing Ocean.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/En Route.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Faith.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Dark Places.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                 </div>
 
-                <h2 class="text-primary font-semibold text-xl mb-4">Continue Watching</h2>
+                <h2 class="text-primary font-semibold text-xl font-headers mb-4">Continue Watching</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-7">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Abyss.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Chronicles.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Lost In The Jungle.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Stellar Journey.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                 </div>
 
-                <h2 class="text-primary font-semibold text-xl mb-4">Popular Family Movies</h2>
+                <h2 class="text-primary font-semibold text-xl font-headers mb-4">Popular Family Movies</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-7">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Canine Caper.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Muse.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/That One Blue Summer.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Chidi Eze.webp"
@@ -220,89 +206,96 @@
                     </div>
                 </div>
 
-                <h2 class="text-primary font-semibold text-xl mb-4">Thriller</h2>
+                <h2 class="text-primary font-semibold text-xl font-headers mb-4">Thriller</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-7">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Scream On Screen.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Traumatic.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Behind The Tragedy.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Stay Strong.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                 </div>
 
-                 <h2 class="text-primary font-semibold text-xl mb-4">Top 5 TV Shows Today</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8 mb-7">
+                 <h2 class="text-primary font-semibold text-xl font-headers mb-4">Top 5 TV Shows Today</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8 mb-7 pb-12">
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/From The Red Carpet.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Beauty In A Wild.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Best Friend Forever.webp "
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                     <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/The Gentleman's Code.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                      <div class="relative group hover:opacity-60 hover:scale-105 transition">
                         <a href="#"><img src="./assets/img/Movies/Chastain Angels.webp"
                                 class=" rounded-lg w-full" />
                             <i class="fa-solid fa-circle-play text-theme absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl
                              opacity-0 group-hover:opacity-100"></i></a>
-
                     </div>
                 </div>
-
-
-
-                
             </div>
-            </div>
-
-
-
         </section>
-
-
     </main>
+
+        <footer class="py-10">
+            <div class="flex items-center justify-center gap-5 mb-7">
+                <a href="#"><img src="./assets/img/logo/Logo youtube.svg" /></a>
+                <a href="#"><img src="./assets/img/logo/Logo twitter.svg" /></a>
+                <a href="#"><img src="./assets/img/logo/Logo facebook.svg" /></a>
+                <a href="#"><img src="./assets/img/logo/Logo instagram.svg" /></a>
+            </div>
+
+            <div class="flex flex-col items-center justify-center gap-2">
+                <p class="text-[14px] text-[#9095A0]">© PlayCine Media Direct, LLC. All rights reserved</p>
+                <div class="flex gap-7 text-[14px] text-[#565E6C]">
+                    <a href="#" class="hover:text-secondery">Privacy</a>
+                    <a href="#" class="hover:text-secondery">Terms</a>
+                    <a href="#" class="hover:text-secondery">Help</a>
+                    <a href="#" class="hover:text-secondery">Devices</a>
+                </div>
+                <div class="flex gap-7 text-[14px] text-[#565E6C]">
+                    <a href="#" class="hover:text-secondery">Media Center</a>
+                    <a href="#" class="hover:text-secondery">Gift Cards</a>
+                    <a href="#" class="hover:text-secondery">Legacy Notices</a>
+                    <a href="#" class="hover:text-secondery">Account</a>
+                </div>
+            </div>
+        </footer>
+
 </body>
 
 </html>
